# packs

./: .rustfmt.toml  Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: codeql.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  logging.rs  version.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/lifecycle/: Cargo.toml
crates/lifecycle/src/: lib.rs  lib.rs.backup  lib.rs.backup2  lib.rs.backup3  lifecycle.rs  runnable.rs
crates/lifecycle/tests/: test_api.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/logging/tests/: test_api.rs
crates/packs/: Cargo.toml
crates/packs/src/: cli.rs  devices.rs  lib.rs  logging.rs
crates/packs_logging/: Cargo.toml
crates/packs_logging/tests/: test_api.rs
crates/sync/: Cargo.toml
crates/sync/src/: lib.rs
