[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
name = "packs"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = { version = "1.0.102" }
futures = { version = "0.3.32" }
thiserror = { version = "2.0.18" }
tracing = { version = "0.1.44" }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "sync"] }
