[package]
name = "cli"
edition.workspace = true
version.workspace = true

[[bin]]
name = "packs"
path = "src/bin/main.rs"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.6.0", features = ["color", "env", "error-context", "std", "string"], default-features = false }
config = { path = "../config" }
dirs = { version = "6.0.0" }
logging = { path = "../logging" }
packs = { path = "../packs" }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.23" }

[build-dependencies]
built = { version = "0.8.0" }
